Enhance hero contrast and redesign experience timeline

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -75,42 +75,62 @@ date: 2021-03-19
 
 <section className="page-section fade-in delay-2">
   <h2 className="section-title">Recent Experience</h2>
-  <div className="experience-grid">
-    <article className="experience-card">
-      <h3>Georgia Tech · BRAINML Lab</h3>
-      <span>Graduate Researcher · 2024 – Present</span>
-      <ul>
-        <li>Analyze multi-session EEG datasets to surface biomarkers for cognitive workload and attention.</li>
-        <li>Develop interactive dashboards and signal-processing pipelines that accelerate lab experimentation.</li>
-        <li>Prototype deep learning models and interpretability workflows for real-time neuroadaptive systems.</li>
-      </ul>
+  <div className="experience-timeline">
+    <article className="timeline-entry">
+      <div className="timeline-entry__meta">
+        <span className="timeline-entry__date">2024 – Present</span>
+      </div>
+      <div className="timeline-entry__card">
+        <h3>Georgia Tech · BRAINML Lab</h3>
+        <p className="timeline-entry__role">Graduate Researcher</p>
+        <ul>
+          <li>Analyze multi-session EEG datasets to surface biomarkers for cognitive workload and attention.</li>
+          <li>Develop interactive dashboards and signal-processing pipelines that accelerate lab experimentation.</li>
+          <li>Prototype deep learning models and interpretability workflows for real-time neuroadaptive systems.</li>
+        </ul>
+      </div>
     </article>
-    <article className="experience-card">
-      <h3>Carl Zeiss XRM</h3>
-      <span>Cloud &amp; AI Engineer · 2025</span>
-      <ul>
-        <li>Re-architected AI-based 3D reconstruction pipelines on Azure to achieve a 10× performance boost.</li>
-        <li>Containerized imaging services with Docker to support microservice-style deployments.</li>
-        <li>Integrated deep-learning denoising into automated scientific workflows for researchers.</li>
-      </ul>
+    <article className="timeline-entry">
+      <div className="timeline-entry__meta">
+        <span className="timeline-entry__date">2025</span>
+      </div>
+      <div className="timeline-entry__card">
+        <h3>Carl Zeiss XRM</h3>
+        <p className="timeline-entry__role">Cloud &amp; AI Engineer</p>
+        <ul>
+          <li>Re-architected AI-based 3D reconstruction pipelines on Azure to achieve a 10× performance boost.</li>
+          <li>Containerized imaging services with Docker to support microservice-style deployments.</li>
+          <li>Integrated deep-learning denoising into automated scientific workflows for researchers.</li>
+        </ul>
+      </div>
     </article>
-    <article className="experience-card">
-      <h3>Walmart</h3>
-      <span>Software Engineer III · 2021 – 2024</span>
-      <ul>
-        <li>Directed the Quick Mods microfrontend rollout, cutting layout publishing time to 10 days.</li>
-        <li>Published a StoreMap embedding SDK on NPM and supported a React Native app for on-the-go updates.</li>
-        <li>Collaborated with product and design partners to launch omnichannel experiences with measurable lift.</li>
-      </ul>
+    <article className="timeline-entry">
+      <div className="timeline-entry__meta">
+        <span className="timeline-entry__date">2021 – 2024</span>
+      </div>
+      <div className="timeline-entry__card">
+        <h3>Walmart</h3>
+        <p className="timeline-entry__role">Software Engineer III</p>
+        <ul>
+          <li>Directed the Quick Mods microfrontend rollout, cutting layout publishing time to 10 days.</li>
+          <li>Published a StoreMap embedding SDK on NPM and supported a React Native app for on-the-go updates.</li>
+          <li>Collaborated with product and design partners to launch omnichannel experiences with measurable lift.</li>
+        </ul>
+      </div>
     </article>
-    <article className="experience-card">
-      <h3>Siemens</h3>
-      <span>Software Engineer · 2019 – 2021</span>
-      <ul>
-        <li>Shipped full-stack features for the Active Workspace platform across React, C++, and MySQL services.</li>
-        <li>Resolved P0 production incidents under aggressive SLAs in a globally distributed codebase.</li>
-        <li>Partnered with enterprise customers to secure multimillion-dollar contracts.</li>
-      </ul>
+    <article className="timeline-entry">
+      <div className="timeline-entry__meta">
+        <span className="timeline-entry__date">2019 – 2021</span>
+      </div>
+      <div className="timeline-entry__card">
+        <h3>Siemens</h3>
+        <p className="timeline-entry__role">Software Engineer</p>
+        <ul>
+          <li>Shipped full-stack features for the Active Workspace platform across React, C++, and MySQL services.</li>
+          <li>Resolved P0 production incidents under aggressive SLAs in a globally distributed codebase.</li>
+          <li>Partnered with enterprise customers to secure multimillion-dollar contracts.</li>
+        </ul>
+      </div>
     </article>
   </div>
 </section>
